@@ -138,7 +138,7 @@
 
 (defconst emacs-w3m-version
   (eval-when-compile
-    (let ((rev "$Revision: 1.487.2.30 $"))
+    (let ((rev "$Revision: 1.487.2.31 $"))
       (and (string-match "\\.\\([0-9]+\\) \$$" rev)
 	   (format "1.3.%d"
 		   (- (string-to-number (match-string 1 rev)) 642)))))
@@ -4891,6 +4891,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-next-anchor (&optional arg)
   "Move cursor to the next anchor."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command '(w3m-next-anchor w3m-previous-anchor)))
       (when (setq w3m-goto-anchor-hist (w3m-anchor-sequence))
@@ -4939,6 +4940,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-previous-anchor (&optional arg)
   "Move cursor to the previous anchor."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command '(w3m-next-anchor w3m-previous-anchor)))
       (when (setq w3m-goto-anchor-hist (w3m-anchor-sequence))
@@ -4976,6 +4978,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-next-form (&optional arg)
   "Move cursor to the next form."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command '(w3m-next-form w3m-previous-form)))
       (when (setq w3m-goto-anchor-hist (w3m-action (point)))
@@ -5013,6 +5016,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-previous-form (&optional arg)
   "Move cursor to the previous form."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command '(w3m-next-form w3m-previous-form)))
       (when (setq w3m-goto-anchor-hist (w3m-action (point)))
@@ -5048,6 +5052,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-next-image (&optional arg)
   "Move cursor to the next image."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command
 		  '(w3m-next-image w3m-previous-image)))
@@ -5086,6 +5091,7 @@ Return t if current line has a same anchor sequence."
 (defun w3m-previous-image (&optional arg)
   "Move cursor to the previous image."
   (interactive "p")
+  (w3m-activate-zmacs-regions)
   (unless arg (setq arg 1))
   (if (null (memq last-command '(w3m-next-image w3m-previous-image)))
       (when (setq w3m-goto-anchor-hist (w3m-image (point)))
@@ -5682,6 +5688,7 @@ frame or a window in the frame is succeeded."
 (defun w3m-scroll-up-or-next-url (arg)
   "Scroll text of current window upward ARG lines; or go to next url."
   (interactive "P")
+  (w3m-activate-zmacs-regions)
   (if (pos-visible-in-window-p (point-max))
       (if w3m-next-url
 	  (w3m-goto-url w3m-next-url)
@@ -5691,6 +5698,7 @@ frame or a window in the frame is succeeded."
 (defun w3m-scroll-down-or-previous-url (arg)
   "Scroll text of current window downward ARG lines; or go to previous url."
   (interactive "P")
+  (w3m-activate-zmacs-regions)
   (if (pos-visible-in-window-p (point-min))
       (if w3m-previous-url
 	  (w3m-goto-url w3m-previous-url)
@@ -5861,6 +5869,7 @@ TYPE is either 'left or 'right and COLS is columns."
 (defun w3m-beginning-of-line (&optional arg)
   "Like `beginning-of-line', except that set window-hscroll to zero first."
   (interactive "P")
+  (w3m-activate-zmacs-regions)
   (when (listp arg)
     (setq arg (car arg)))
   (w3m-set-window-hscroll (selected-window) 0)
@@ -5870,6 +5879,7 @@ TYPE is either 'left or 'right and COLS is columns."
   "Like `end-of-line', except that scroll left to make the line end
 positions around there (+/-3 lines) visible."
   (interactive "P")
+  (w3m-activate-zmacs-regions)
   (when (listp arg)
     (setq arg (car arg)))
   (forward-line (1- (or arg 1)))
